# gpio-reader

./: CMakeLists.txt  Define.h  README.md  main.cpp
include/: semaphore.h
include/logger/: Logger.cpp  Logger.h
include/websocketpp/: close.hpp  connection.hpp  connection_base.hpp  endpoint.hpp  endpoint_base.hpp  error.hpp  frame.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp  version.hpp
include/websocketpp/base64/: base64.hpp
include/websocketpp/common/: asio.hpp  asio_ssl.hpp  chrono.hpp  connection_hdl.hpp  cpp11.hpp  functional.hpp  md5.hpp  memory.hpp  network.hpp  random.hpp  regex.hpp  stdint.hpp  system_error.hpp  thread.hpp  time.hpp  type_traits.hpp
include/websocketpp/concurrency/: basic.hpp  none.hpp
include/websocketpp/config/: asio.hpp  asio_client.hpp  asio_no_tls.hpp  asio_no_tls_client.hpp  core.hpp  core_client.hpp  debug.hpp  debug_asio.hpp  debug_asio_no_tls.hpp  minimal_client.hpp  minimal_server.hpp
include/websocketpp/extensions/: extension.hpp
include/websocketpp/extensions/permessage_deflate/: disabled.hpp  enabled.hpp
include/websocketpp/http/: constants.hpp  parser.hpp  request.hpp  response.hpp
include/websocketpp/impl/: connection_impl.hpp  endpoint_impl.hpp  utilities_impl.hpp
include/websocketpp/logger/: basic.hpp  levels.hpp  stub.hpp  syslog.hpp
include/websocketpp/message_buffer/: alloc.hpp  message.hpp  pool.hpp
include/websocketpp/processors/: base.hpp  hybi00.hpp  hybi07.hpp  hybi08.hpp  hybi13.hpp  processor.hpp
include/websocketpp/random/: none.hpp  random_device.hpp
include/websocketpp/roles/: client_endpoint.hpp  server_endpoint.hpp
include/websocketpp/sha1/: sha1.hpp
network/: AbstractObject.cpp  AbstractObject.h  ByteArray.cpp  ByteArray.h  CMakeLists.txt  ProtoSchema.cpp  ProtoSchema.h  RequestManager.cpp  RequestManager.h  WebsocketClient.cpp  WebsocketClient.h  main.cpp
network/proto/: ActionMap.pb.cc  ActionMap.pb.h  Error.pb.cc  Error.pb.h  MessageContainer.pb.cc  MessageContainer.pb.h  Security.pb.cc  Security.pb.h
(+20 files in other folders)
